ADD columns shipped and received items

--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -742,7 +742,6 @@ FBA-Inbound-Aufträge anzeigen:
 
 | *Eigner*
 | Eigner aus der Dropdown-Liste wählen, um nach FBA-Inbound-Aufträgen zu suchen, die diese Person erstellt hat.
-// Eigentümer in Eigner ändern
 
 | *Lager*
 | Lager aus der Dropdown-Liste wählen, um nach FBA-Inbound-Aufträgen zu suchen, die in dieses Lager umgebucht wurden.
@@ -769,6 +768,16 @@ Die Status *Offen*, *Erledigt* und *Alle* stehen zur Verfügung. +
 | *Sendungs-ID*
 |Die ID, die Amazon der Sendung beim Erstellen im Amazon Seller Central zugewiesen hat
 
+| *Versendete Artikel*
+|Die Anzahl aller versendeten Artikel.
+
+| *Erhaltene Artikel*
+|Alle Artikel, die sich bei Amazon im Sendungsstatus *RECEIVING* oder *CLOSED* befinden. +
+Die farbigen Punkte zeigen den jeweiligen Sendungsstatus an: +
+Grün: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Die Anzahl der erhaltenen Artikel entspricht hier der Anzahl der versendeten Artikel. +
+Gelb: Die Sendung befindet sich im Status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* oder *CHECKED_IN*. Es wird keine Anzahl von Artikeln angezeigt. +
+Rot: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Die Anzahl der erhaltenen Artikel ist hier geringer als die Anzahl der versendeten Artikel.
+
 | *Sendungsstatus*
 a|Der Status, in dem sich die Amazon-Sendung aktuell befindet. Die folgenden, bei Amazon verfügbaren Status werden hier angezeigt: +
 *WORKING*: Die Sendung wurde von dem:der Händler:in erstellt, aber noch nicht versendet. +
@@ -782,6 +791,9 @@ a|Der Status, in dem sich die Amazon-Sendung aktuell befindet. Die folgenden, be
 *DELETED*: Die Sendung wurde von dem:der Händler:in storniert, bevor die Sendung an das Amazon Fulfillment-Center gesendet wurde. +
 *ERROR*: Ein Fehler ist aufgetreten und die Sendung wurde nicht von Amazon bearbeitet.
 
+| *Status*
+| Status des Auftrags. +
+Es gibt die Status *Offen*, *Erledigt* und *Alle*.
 |====
 
 [#160]
@@ -828,7 +840,7 @@ Paketinhaltsliste öffnen:
 → Die gefilterten FBA-Inbound-Aufträge werden in der Übersicht rechts angezeigt.
 . Klicke auf den Auftrag. +
 → Die Optionen für die Auftragsbearbeitung werden angezeigt.
-. Klicke auf *Paketinhaltsliste*. +
+. Klicke auf *FBA Inbound Paketinhaltsliste*. +
 → Der Auftrag wird im Menü *Aufträge » Paketinhaltsliste* angezeigt.
 . Packe den Auftrag anhand der xref:auftraege:paketinhaltsliste.adoc#[Paketinhaltsliste].
 
@@ -854,7 +866,7 @@ FBA-Inbound-Auftrag bei Amazon anmelden (eigener Versanddienstleister):
 . Öffne das Menü *Waren » Amazon FBA Inbound*.
 . Klicke auf den Auftrag. +
 → Die Optionen für die Auftragsbearbeitung werden angezeigt.
-. Klicke auf *Paketinhaltsliste*. +
+. Klicke auf *FBA Inbound Paketinhaltsliste*. +
 → Der Auftrag wird im Menü *Aufträge » Paketinhaltsliste* angezeigt.
 . Klicke auf *Anmelden*. +
 *_Hinweis:_* Die Schaltfläche *Anmelden* wird nur angezeigt, wenn du die Paketinhaltsliste über das Menü *Waren » Amazon FBA Inbound* öffnest. +
@@ -891,7 +903,7 @@ FBA-Inbound-Auftrag bei Amazon anmelden (Amazon-Transportpartner):
 . Öffne das Menü *Waren » Amazon FBA Inbound*.
 . Klicke auf den Auftrag. +
 → Die Optionen für die Auftragsbearbeitung werden angezeigt.
-. Klicke auf *Paketinhaltsliste*. +
+. Klicke auf *FBA Inbound Paketinhaltsliste*. +
 → Der Auftrag wird im Menü *Aufträge » Paketinhaltsliste* angezeigt.
 . Klicke auf *Anmelden*. +
 *_Hinweis:_* Die Schaltfläche *Anmelden* wird nur angezeigt, wenn du die Paketinhaltsliste über das Menü *Waren » Amazon FBA Inbound* öffnest und du alle Pakete und Paletten geschlossen hast. +
