--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1373,7 +1373,7 @@ Damit die Aktion **Picklisten-Suche** korrekt funktioniert, wenn Benutzer:innen 
 [discrete]
 ==== Rechte für Backend-Benutzer:innen vergeben
 
-:rights-purpose: die Aktion *Picklisten-Suche* ausführen können
+:rights-purpose: pass:quotes[die Aktion *Picklisten-Suche* ausführen können]
 :right-one: pass:quotes[*Aufträge > Fulfillment > Picklisten > Anzeigen*]
 :right-two: pass:quotes[*Aufträge > Fulfillment > Picklisten > Bearbeiten*]
 
@@ -2186,7 +2186,7 @@ Damit die Aktion *Wareneingang (einfach)* korrekt funktioniert, wenn Benutzer:in
 [discrete]
 ==== Rechte für Backend-Benutzer:innen vergeben
 
-:rights-purpose: die Aktion *Wareneingang (einfach)* ausführen können
+:rights-purpose: pass:quotes[die Aktion *Wareneingang (einfach)* ausführen können]
 :right-one: pass:quotes[*Artikel > Artikel > Variante > Lieferantendaten > Anzeigen*]
 
 include::_includes:page$rechte.adoc[]
