--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -1372,7 +1372,7 @@ For the **Pick list search** procedure to work correctly if a process containing
 [discrete]
 ==== Assigning rights for back end users
 
-:rights-purpose: execute the *Pick list search* procedure
+:rights-purpose: pass:quotes[execute the *Pick list search* procedure]
 :right-one: pass:quotes[*Orders > Fulfilment > Pick lists > Show*]
 :right-two: pass:quotes[*Orders > Fulfilment > Pick lists > Edit*]
 
@@ -2094,7 +2094,7 @@ For the *Single incoming item* procedure to work correctly if a process containi
 [discrete]
 ==== Assigning rights for back end users
 
-:rights-purpose: execute the *Single incoming item* procedure
+:rights-purpose: pass:quotes[execute the *Single incoming item* procedure]
 :right-one: pass:quotes[*Items > Item > Variation > Supplier data > Show*]
 
 include::_includes:page$rights.adoc[]
