ADD more work to the stock chapter

--- a/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
@@ -87,6 +87,16 @@ Beim Hinzufügen von Artikeln kannst du sowohl den Einkaufspreis als auch die UV
 *Lagerort auf Variante übertragen, wenn noch kein Lagerort oder Standard-Lagerort hinterlegt wurde* = Die Übertragung erfolgt nur, wenn noch kein Lagerort hinterlegt wurde.
 |====
 
+//diese Erklärung passt besser hier oder weiter unten bei Ware einbuchen?
+
+////
+[IMPORTANT]
+.Bei Lagerortvorschlag kein Wareneingang auf Standard-Lagerort möglich
+====
+Wenn eine Variante mit einem Lagerortvorschlag verknüpft wurde, ist der Wareneingang auf den Standard-Lagerort nicht mehr möglich.
+====
+////
+
 [#400]
 == UVP und Preis zuordnen
 
