--- a/docs/de-de/modules/warenwirtschaft/pages/variations-track-stock.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/variations-track-stock.adoc
@@ -4,19 +4,112 @@
 :author: team-stock
 
 ////
-zuletzt bearbeitet 06.05.2022
+zuletzt bearbeitet 09.05.2022
 ////
 
 #Intro#
 
-== Welche Artikel sollen erfasst werden?
+[#100]
+== Welche Produkte sollen erfasst werden?
+
+Entscheide zuerst, für welche Produkte plentymarkets die Lagerbestände überwachen soll.
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verfügbarkeit*.
+. Wähle die passende Option aus der Dropdown-Liste *Beschränkung*.
+. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
+
+[cols="1,4a"]
+|====
+|Einstellung |Erläuterung
+
+| *Keine*
+|Diese Einstellung ist nützlich für Situationen, in denen du zwar den Bestand zählen könntest, es aber keine Rolle spielt, ob der Bestand negativ wird.
+Das Produkt steht zur Verfügung, nur ohne einen bestimmten Bestandswert.
+
+*_Hinweis_*: Manche Marktplätze berücksichtigen ausschließlich den Bestandswert, der der Variante zugeordnet ist.
+Wenn du also diese Einstellung wählst, kann es sein, dass der Marktplatz nie ein aktives Angebot für das Produkt hat, da es nie als ein positiver Bestandswert verstanden wird.
+Prüfe, wie deine Ziel-Marktplätze die Einstellungen zur Bestandsbegrenzung interpretieren, bevor du mit dem Verkauf beginnst.
+
+| *Auf Netto-WB*
+|Dies ist die am häufigsten verwendete Option.
+Sie verhindert, dass Artikel versehentlich überverkauft werden.
+Der Warenbestand wird auf den Netto-Bestand beschränkt.
+Dieser Netto-Bestand wird an Marktplätze übermittelt.
+//Die Verfügbarkeit der Variante wird automatisch geprüft.
+
+*_Was bedeutet Netto-Bestand?_* +
+Diese Zahl gibt an, wie viele Exemplare derzeit zum Verkauf zur Verfügung stehen.
+Der Netto-Warenbestand ist eine Teilmenge des physischen Bestands.
+Wenn vom physischen Warenbestand alle Reservierungen abgezogen werden, ergibt sich der Netto-Bestand.
+xref:warenwirtschaft:warenbestaende-verwalten.adoc#100[Weitere Informationen].
+
+| *Keinen WB für diese Variante führen*
+|Diese Einstellung ist nützlich für Situationen, in denen es sehr mühsam wäre, die Bestandseinheiten zu zählen.
+Stell dir zum Beispiel vor, du verkaufst Baumaterial und hast Millionen Exemplare einer Schraube.
+
+*_Hinweis_*: Manche Marktplätze berücksichtigen ausschließlich den Bestandswert, der der Variante zugeordnet ist.
+Wenn du also diese Einstellung wählst, kann es sein, dass der Marktplatz nie ein aktives Angebot für das Produkt hat, da es nie als ein positiver Bestandswert verstanden wird.
+Prüfe, wie deine Ziel-Marktplätze die Einstellungen zur Bestandsbegrenzung interpretieren, bevor du mit dem Verkauf beginnst.
+
+*_Hinweis_*: Wenn diese Einstellung gewählt wird, werden im Tab *Bestand* der Variante die Tabs *Korrektur*, *Warenbestand*, *Zulauf* und *Warenbewegung* ausgeblendet.
+
+|====
 
 [#200]
-== Wo befinden sich die Artikel?
+== Wie ist die Verfügbarkeit der Varianten?
 
-Wo wird diese Variante gelagert?
+Gib als nächstes die durchschnittliche Lieferzeit deiner Varianten an.
+Diese Angabe kann entweder statisch oder dynamisch sein.
+
+* *Statisch*: Du wählst eine Abfertigungszeit, die immer für die Variante gilt, z.B. Versand innerhalb von 3 Tagen.
+* *Dynamisch*: Du wählst eine Abfertigungszeit für den Fall, dass die Variante auf Lager ist, z.B. Versand innerhalb von 3 Tagen.
+Und du wählst eine zweite Abfertigungszeit für den Fall, dass die Variante nicht auf Lager ist, z.B. Versand innerhalb von 2 Wochen.
+
+[.collapseBox]
+.*Statische Einstellung*
+--
+
+TIP: In plentymarkets stehen zehn Verfügbarkeitsstufen zur Auswahl.
+Stelle sicher, dass du die Verfügbarkeitsstufen bereits im Menü *Einrichtung » Artikel » Verfügbarkeit* definiert hast, bevor du fortfährst.
+xref:artikel:verfuegbarkeit.adoc#100[Weitere Informationen].
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verfügbarkeit*.
+. Wähle die passende Verfügbarkeitsstufe (Symbole 1-10).
+. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
+
+--
+
+[.collapseBox]
+.*Dynamische Einstellung*
+--
+
+TIP: In plentymarkets stehen zehn Verfügbarkeitsstufen zur Auswahl.
+Stelle sicher, dass du die Verfügbarkeitsstufen bereits im Menü *Einrichtung » Artikel » Verfügbarkeit* definiert hast, bevor du fortfährst.
+xref:artikel:verfuegbarkeit.adoc#100[Weitere Informationen].
+
+. Öffne das Menü *Einrichtung » Waren » Lager » [Lager öffnen] » Einstellungen*.
+. Wähle die passende Verfügbarkeitsstufe (Symbole 1-10) für die Einstellungen *Verfügbarkeit mit Bestand* und *Verfügbarkeit ohne Bestand*.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+Falls die Variante mehreren Lagern mit unterschiedlichen Verfügbarkeitsstufen zugeordnet ist, dann nimmt plentymarkets immer die beste Option.
+Beispiel: Der Artikel ist in Lager A und B verfügbar.
+
+* Lager A hat eine Verfügbarkeit von 2 Tagen.
+* Lager B hat eine Verfügbarkeit von 5 Tagen.
+* In diesem Fall wird das Lager A verwendet, da es die bessere Verfügbarkeit bietet.
+
+--
+
+[#300]
+== Wo befinden sich die Varianten?
+
+Wo wird die Variante gelagert?
 Ordne deine Varianten dem passenden Lagerort zu.
-Indem du diese Daten in plentymarkets speicherst, kannst du später xref:warenwirtschaft:wareneingaenge-verwalten.adoc#450[den Wareneingang buchen].
+Dies ist nützlich, damit du später:
+
+* xref:warenwirtschaft:wareneingaenge-verwalten.adoc#450[den Wareneingang buchen kannst].
+* xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#[Waren nachbestellen kannst, wenn sie zur Neige gehen].
+
 
 [TIP]
 .Hast du bereits Lager-Informationen gespeichert?
@@ -25,6 +118,8 @@ Bevor du Varianten mit Lagerorten verknüpfen kannst, musst du plentymarkets ein
 Wie viele Zonen, Regale, Regalböden und Lagerorte gibt es in deinem Lager?
 xref:warenwirtschaft:lager-einrichten.adoc#[Richte dein Lager ein], bevor du fortfährst.
 ====
+
+////
 
 [.instruction]
 Lager hinzufügen:
@@ -36,6 +131,14 @@ Lager hinzufügen:
 . Klicke auf *Übernehmen*. +
 → Die Daten werden als Tabelle dargestellt.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+////
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Lager*.
+. Wähle das zu verknüpfende Lager aus der Dropdown-Liste aus.
+. Klicke auf *Hinzufügen* (icon:plus[role="green"]). +
+→ Das Lager wird der Variante zugeordnet und weitere Einstellungen können optional vorgenommen werden.
+. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
 
 //zukunft - die beschreibungen in der tabelle verständlicher machen (siehe Schulung mit Oskar) und auch mit den Beschreibungen unter warenwirtschaft:wareneingaenge-verwalten.adoc#200 angleichen - dafür includes verwenden
 
@@ -60,10 +163,6 @@ Erst wenn die Variante auf diesen Meldebestand sinkt, wird ein Mengenvorschlag f
 
 *_Hinweis_*: Wenn du die xref:warenwirtschaft:lager-einrichten.adoc#Meldebestand_Variante_Lager[Differenz zum Meldebestand] dynamisch berechnen lässt, darf hier nur `0` gespeichert werden.
 
-| *Maximalbestand*
-|Gib den maximalen Bestand für das Lager ein.
-Der Maximalbestand wird für den Bestellmengenvorschlag berücksichtigt, sodass der Vorschlag den Maximalbestand nicht überschreitet.
-
 | *Lagerreichweite*
 |Gib die Anzahl der Tage ein, den der Warenbestand bis zur nächsten Nachbestellung reichen soll.
 Die Lagerreichweite fließt in die Berechnung des Nachbestellungsvorschlags ein.
@@ -75,6 +174,11 @@ Wird hier kein Wert eingetragen, wird die Lagerreichweite bei der Berechnung ein
 Ein Standardwert aus der Praxis für die Lagerreichweite ist z.B. 14 Tage.
 Wenn der Artikel den Meldebestand erreicht hat, werden die 14 Tage zur Berechnung der Nachbestellmenge berücksichtigt, d.h. es wird die Menge zur Nachbestellung vorgeschlagen, die für die folgenden 14 Tage ausreicht.
 
+| *Maximalbestand*
+|Gib den maximalen Bestand für das Lager ein.
+Der Maximalbestand wird für den Bestellmengenvorschlag berücksichtigt, sodass der Vorschlag den Maximalbestand nicht überschreitet.
+
+//klären, ob diese Option eine Funktion hat - es klang als ob wir uns nicht sicher sind, ob Amazon den Wert hier berücksichtigt
 | *Bestandspuffer*
 |Gib einen Bestandspuffer ein.
 Dies bewirkt, dass der Bestand für bestimmte Marktplätze um den eingetragenen Wert reduziert wird.
@@ -104,73 +208,6 @@ Ist der Lagerbestand auf dem Lager gleich 0, ist das Aktivieren und Deaktivieren
 | *Lagerortvorschlag*
 |Wähle einen Lagerort, der bei Nachbestellungen automatisch vorgeschlagen werden soll.
 
-*_Hinweis_*: Der Standard-Lagerort bedeutet, dass kein Lagerort zugewiesen wurde.
+*_Hinweis_*: Der Standard-Lagerort dient als Platzhalter und bedeutet, dass noch kein Lagerort zugewiesen wurde.
 
-|====
-
----
-
-Eine Variante muss mit einem Lager samt Lagerort verknüpft werden, damit ein Wareneingang gebucht werden kann. Der Standard-Lagerort dient als Platzhalter-Lagerort, was bedeutet, dass noch kein Lagerort zugeordnet wurde. Wähle deshalb einen deiner Lagerorte als Lagerortvorschlag.
-
-[IMPORTANT]
-.Bei Lagerortvorschlag kein Wareneingang auf Standard-Lagerort möglich
-====
-Wenn eine Variante mit einem Lagerortvorschlag verknüpft wurde, ist der Wareneingang auf den Standard-Lagerort nicht mehr möglich.
-====
-
-[IMPORTANT]
-.Vererben der Einstellung an Varianten
-====
-Wenn du ein Lager für eine Hauptvariante aktivierst, wird diese Einstellung auch an alle Varianten des Artikels xref:artikel:vererbung.adoc#[vererbt].
-====
-
-[.instruction]
-Variante mit Lagerort verknüpfen:
-
-. Öffne das Menü *Artikel » Artikel bearbeiten*.
-. xref:artikel:suche.adoc#100[Suche] und öffne den Artikel.
-. Wechsele in das Tab *Lager*.
-. Wähle ein Lager aus der Dropdown-Liste.
-. Klicke auf *Hinzufügen* (icon:plus-square[role="green"]). +
-→ Das Lager wird der Variante zugeordnet und weitere Einstellungen können optional vorgenommen werden.
-
-[[tabelle-lagereinstellungen-variante]]
-.Lagereinstellungen einer Variante
-[cols="1,2"]
-|====
-|Einstellung |Erläuterung
-
-|[#intable-lagerorttyp]*Lagerorttyp*
-|Wähle anhand der Artikelgröße einen Lagerorttyp.
-
-| *Zone*
-|Wähle eine Zone, wenn das Lager in Zonen eingeteilt wurde.
-
-| *Meldebestand*
-|Gib die Anzahl ein, bei der eine Nachbestellung der Variante erfolgen soll. Erst wenn die Variante auf diesen Meldebestand sinkt, wird ein Mengenvorschlag für die Variante angezeigt, da erst bei Erreichen des Meldebestands eine Nachbestellung erfolgen soll. +
-*_Hinweis:_* Wenn du die xref:warenwirtschaft:lager-einrichten.adoc#Meldebestand_Variante_Lager[Differenz zum Meldebestand] dynamisch berechnen lässt, darf hier nur `0` gespeichert werden.
-
-| *Lagerreichweite*
-|Gib die Anzahl der Tage ein, den der Warenbestand bis zur nächsten Nachbestellung reichen soll. Die Lagerreichweite fließt in die Berechnung des Nachbestellungsvorschlags ein. Ein Standardwert aus der Praxis für die Lagerreichweite ist z.B. 14 Tage. Wenn der Artikel den Meldebestand erreicht hat, werden die 14 Tage zur Berechnung der Nachbestellmenge berücksichtigt, d.h. es wird die Menge zur Nachbestellung vorgeschlagen, die für die folgenden 14 Tage ausreicht.
-Wird hier kein Wert eingetragen, wird die Lagerreichweite bei der Berechnung eines Nachbestellungstermins nicht berücksichtigt.
-
-| *Maximalbestand*
-|Gib den maximalen Bestand für das Lager ein. Der Maximalbestand wird für den Bestellmengenvorschlag berücksichtigt, sodass der Vorschlag den Maximalbestand nicht überschreitet.
-
-| *Bestandspuffer*
-|Gib einen Bestandspupper ein. Ein Bestandspuffer bewirkt, dass der Bestand für bestimmte Marktplätze um den eingetragenen Wert reduziert wird. +
-__Beispiel__: Der Artikel hat einen Bestand von 50. Du möchtest einen Bestandspuffer von 10 Artikeln, damit der Artikel nicht vollständig über den Marktplatz abverkauft wird. Dazu gibst du *10* als Bestandspuffer ein. Zum Marktplatz wird dann ein Bestandswert von *40* übertragen. +
-Hier eingetragene Werte gelten für die Marktplätze xref:maerkte:amazon-einrichten.adoc#[Amazon] und xref:maerkte:shopgate.adoc#[Shopgate]. Die Werte sind gegenüber den hinterlegten Bestandspufferwerten dieser Marktplätze dominant. +
-Bei anderen Marktplätzen, die nicht hier aufgeführt sind, haben die Bestandspuffer-Einstellungen des jeweiligen Marktplatzes Vorrang vor dieser Einstellung.
-
-| *MHD*
-|Wähle, ob für die Variante und das Lager das Mindesthaltbarkeitsdatum der Produkte erfasst werden soll. +
-*_Hinweis:_* Sobald Lagerbestand auf dem Lager vorhanden ist, kann die Option *MHD* nicht mehr deaktiviert werden. Ist der Lagerbestand auf dem Lager gleich 0, ist das Aktivieren und Deaktivieren der Option *MHD* möglich.
-
-| *Charge*
-|Wähle, ob für die Variante und das Lager die Charge der Produkte erfasst werden soll. +
-*_Hinweis:_* Sobald Lagerbestand auf dem Lager vorhanden ist, kann die Option *Charge* nicht mehr deaktiviert werden. Ist der Lagerbestand auf diesem Lager gleich 0, ist das Aktivieren und Deaktivieren der Option *Charge* möglich.
-
-| *Lagerortvorschlag*
-|Wähle einen Lagerort, der bei Nachbestellungen automatisch vorgeschlagen werden soll. Die Einstellung *Standard-Lagerort* bedeutet, dass kein Lagerort zugewiesen wurde.
 |====
