--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -1,4 +1,4 @@
-= Using marketplace exports
+= Using marketplace formats
 :keywords: catalogue, Marketplace formats, marketplace export, market export
 :description: Get to know catalogues for exporting variation data to markets.
 :page-aliases: marketplace-export.adoc
@@ -7,10 +7,12 @@
 
 :marketplace-export:
 
-Catalogues are used to prepare data for export. For exporting variation data to markets and price search engines, you use catalogues with marketplace formats.
+Use the marketplace formats of the catalogue to export variation and stock information to markets and price portals.
+
+include::_includes:page$new-page-info-box.adoc[]
 
 On this page, find out how to use catalogues to export variation data to markets. Only the general workflow is explained.
-More detailed information about how you create an structure a catalogue can be found on the manual pages of the individual markets.
+More detailed information about how you create an structure a catalogue can be found on the manual pages of the individual xref:markets:markets.adoc#[markets].
 
 plentymarkets is working on moving all markets to catalogue formats. At the moment, you can export item data to the following markets using catalogues:
 
@@ -21,89 +23,10 @@ plentymarkets is working on moving all markets to catalogue formats. At the mome
 * Some Amazon flatfiles
 * Plugins by third parties
 
-TIP: This page is new and we always want to improve. Couldn’t find what you are looking for or do you think something could be explained better? Then let us know by using the feedback function. The more details you provide, the more we can improve this page.
+[#first-contact]
+== First introduction
 
-[#menu-screenshot]
-== First introduction: menu structure
-
-The catalogue menu is the same for all marketplace formats:
-
-image::markets:catalogue-menu-colours.png[]
-__Menu structure of a catalogue with marketplace format__
-
-[cols="1,3a"]
-|====
-
-| *Navigation*
-| When you open a catalogue, the view *Mapping* is shown by default. Use the navigation to switch to other views of the catalogue.
-
-[cols="1,3a"]
-!===
-
-! icon:search[role="darkGrey"] *Overview*
-! Go back to the catalogue overview, that is to the list of catalogues.
-
-! *icon:plus[role="darkGrey"] Create catalogue*
-! Create a new catalogue.
-
-! _List of opened catalogues_
-! The navigation shows all catalogues that you accessed during your current session. This allows you to quickly switch between the catalogues you are currently working on. The catalogue that is currently on view is shown in blue. The names of the other catalogues are shown in grey. +
-*_Tip:_* If the list gets too long or you find it distracting, point your cursor to a catalogue in the list. An X is shown. Click on that X to close the catalogue.
-
-! icon:cog[role="darkGrey"] Settings
-! Open the catalogue settings. +
-
-* Basic settings = Name and format type of the catalogue. You enter this information to create a catalogue.
-* Format settings = Settings for the export file structure
-* Export settings = Settings for automatic export
-* Download settings = Settings for the URL that is used to access the export file
-
-*_Important:_* You do not need these settings for most markets. These settings are only relevant if you want to export data to a file.
-
-! icon:order_return_create_edit[set=plenty] *Mapping*
-! Shown when you open the catalogue. Here, you map suitable plentymarkets data fields to the marketplace data fields.
-
-! icon:filter_alt[set=material] Filter
-! Add filters to only export specific records.
-
-! icon:order_return_create_edit[set=plenty] *Own data fields*
-! Own data fields are currently not available for most exports.
-!===
-
-| *Toolbar*
-| The toolbar provides actions for the catalogue.
-
-[cols="1,5a"]
-!===
-! icon:save[role="darkGrey"]
-! Saves the catalogue settings.
-
-! icon:preview[set=material]
-! Creates a preview of the export data. The preview contains the first 5 data rows of the export file. +
-*_Important:_* The preview function is not available for all marketplace formats.
-
-! icon:download[set=plenty, role="darkGrey"]
-! Starts the manual download of the catalogue data. +
-*_Important:_* This option starts a manual export. The data is _not_ exported to the market.
-
-! icon:more_vert[set=material]
-! Show additional actions.
-
-* icon:toggle-off[role="darkGrey"] = Activate to only view mandatory fields.
-* icon:restore[role="darkGrey"] = Restores an earlier version of the catalogue.
-* icon:delete[set=material] = Deletes the catalogue.
-!===
-
-| *Marketplace data field*
-| To the right of the navigation, all data fields available for the market are listed. Mandatory fields are marked with an asterisk (&#42;). +
-*_Tip:_* In the toolbar, click on the further actions (icon:more_vert[set=material]) to show or hide optional data fields.
-
-| *plentymarkets data fields*
-| The right side of the catalogue is where you map the marketplace data fields with suitable plentymarkets data fields.
-Before you map the first data field, all you can see here is a whole lot of icon:plus[role="darkGrey"] *Add data field* buttons. That’s normal and as it should be. +
-*_Tip:_* In the screenshot, a few the fields are already mapped.
-
-|====
+include::partial$catalogue-first-contact.adoc[]
 
 [#market-formats]
 == What is a catalogue with marketplace format?
@@ -138,10 +61,10 @@ The properties are similar to the old characteristics and free text fields. As s
 
 Below are two examples on how to use properties.
 
-<<#example-1, Example 1: Diameter information>>
-<<#example-2, Example 2: Brand names>>
+* <<#example-1, Example 1: Diameter information>>
+* <<#example-2, Example 2: Brand names>>
 
-* Is this your first time working with properties? For further information, refer to the item xref:item:properties.adoc#500[Properties] page.
+Is this your first time working with properties? For further information, refer to the item xref:item:properties.adoc#500[Properties] page.
 
 [#example-1]
 === Example 1: Diameter information
@@ -235,7 +158,7 @@ Marketplace data fields are the fields for which you can export data to the mark
 
 [[marketplace-data-fields]]
 .Marketplace data fields in the OTTO Market catalogue
-image::markets:marketplace-data-fields.png[]
+image::data:marketplace-data-fields.png[]
 
 *_What you should know about marketplace data fields:_*
 
@@ -251,13 +174,13 @@ The plentymarkets data fields in the catalogue are the same settings as the ones
 
 [[plentymarkets-data-fields]]
 .List of plentymarkets data field after clicking on *+ Add data field*
-image::markets/plentymarkets-data-fields.png[]
+image::data:plentymarkets-data-fields.png[]
 
 *_What you should know about plentymarkets data fields:_*
 
 * A market expects product data that cannot be saved for a variation directly? Create a property. Then, link this property with your variations. Save product data as the values for this property.
-* You can map a fallback data field in addition to a plentymarkets data field. All plentymarkets data field are again available as fallback data fields. The difference is that the content of the fallback data field is only exported if the first mapped plentymarkets data field does not exist or is empty.
 * Check out the manual page for the standard format xref:data:catalogues-item.adoc#[Item (new)] to find out which data is exported with which plentymarkets data fields.
+* You can map a fallback data field in addition to a plentymarkets data field. All plentymarkets data field are again available as fallback data fields. The difference is that the content of the fallback data field is only exported if the first mapped plentymarkets data field does not return a value.
 
 [#mappings]
 == Which mappings are available?
@@ -276,12 +199,12 @@ This information is structured like this:
 [#mappings-what-is]
 === What does “mapping” mean?
 
-Mapping means that the link a marketplace data field with a plentymarkets data field.
+Mapping means that you link a marketplace data field with a plentymarkets data field.
 Slightly simplified and just to get you started: You do that by clicking on *Add data field* next to the marketplace data field.
 
 However, what happens when you map these fields?
 
-*For this one marketplace data field, I want to export the data to the market that is saved in this plentymarkets data field for the variation.*
+* *For this one marketplace data field, I want to export the data to the market that is saved in this plentymarkets data field for the variation.*
 
 *_Example:_*
 
@@ -291,7 +214,7 @@ image::data:productname-example-1.png[]
 
 As such, the name that is saved in the menu *Item » Edit item » [Open item] » [Open variation] » Tab: Settings* for the setting *Name 1* is exported to the market for all variations.
 
-For the variation you can see in the screenshot below, that means that the name *Design chair Black&White* is exported to the market.
+For the variation you can see in the screenshot below, that means that the name *Design armchair Black&White* is exported to the market.
 
 image::data:productname-example-2.png[]
 
@@ -306,12 +229,12 @@ In a 1:1 mapping, you map a plentymarkets data field to the marketplace data fie
 So this mapping specifies:
 
 * I want to fill this marketplace data field with the data from this plentymarkets setting.
-* If the data field is empty for a variation, no value is exported for this variation.
+* If the plentymarkets data field does not return a value, no value is exported for this variation.
 
 [.collapseBox]
 .Creating a simple 1:1 mapping
 --
-include::partial$catalogue-mapping.adoc[tag=simple-mappings-config]
+include::markets:partial$catalogue-mapping.adoc[tag=simple-mappings-config]
 --
 
 [#one-to-one-complex]
@@ -337,17 +260,19 @@ include::markets:partial$catalogue-mapping.adoc[tag=complex-mappings-config]
 You specify:
 
 * I want to fill this marketplace data field with the data from this plentymarkets setting.
-* If the data field is empty for a variation, the fallback data field is checked and the value of that fallback data field is exported instead.
+* If the plentymarkets data field does not return a value for a variation, the fallback data field is checked and the value of that fallback data field is exported instead.
 
-All plentymarkets data field are available as fallback data fields. However, the content of the fallback data field is only exported if the first mapped data field does not exist or is empty for a variation.
+All plentymarkets data field are available as fallback data fields. However, the content of the fallback data field is only exported if the first mapped plentymarkets data field does not return a value.
 
 *_Workflow for fallback data fields:_*
 
 * During the export, the mapped plentymarkets data field of each variation is checked for content.
 * If data is saved for a variation for that plentymarkets data field, then this data is exported.
-* If the data field does not exist or is empty for a variation, the system jumps to the first fallback data field and checks if that field contains any data.
+* If the plentymarkets data field does not return any data, the system jumps to the first fallback data field and checks if this returns any data. +
+** *_Example 1:_* You mapped *Name 3* as the first plentymarkets data field. However, in the variation date a name is only saved in the field *Name 1*. The field *Name 3* is empty. +
+** *_Example 2:_* You mapped a property as the first plentymarkets data field. However, this property is not linked to the variation.
 * If the fallback data field also does not contain data for the variation, the second fallback data field is checked and so on.
-* If the system cannot find any data at all for a marketplace data field for a variation, what happens next depends on whether or not the data field is mandatory or not. If so, the variation is not exported. If not, the variation is exported but the marketplace data field is not filled on the market.
+* If no data is found for a marketplace data field for a variation, what happens next depends on whether or not the data field is mandatory or not. If so, the variation is not exported. If not, the variation is exported. The variation is exported but the marketplace data field is not filled on the market.
 
 [[fallback-data-fields]]
 ._Example “Colour” in the REWE fashion catalogue:_ An attribute for colour as the main data field, a property for colour as the fallback data field
@@ -356,7 +281,7 @@ image::data:fallback-data-fields.png[]
 [.collapseBox]
 .Creating a 1:1 mapping with fallback data fields
 --
-include::maerkte:partial$catalogue-mapping.adoc[tag=fallback-mappings-config]
+include::markets:partial$catalogue-mapping.adoc[tag=fallback-mappings-config]
 --
 
 [#one-to-n]
@@ -376,9 +301,8 @@ So this mapping specifies:
 [.collapseBox]
 .Creating a 1:n mapping
 --
-include::maerkte:partial$catalogue-mapping.adoc[tag=1-to-n-mappings-config]
+include::markets:partial$catalogue-mapping.adoc[tag=1-to-n-mappings-config]
 --
-
 
 [#own-value]
 === Own value mappings
@@ -403,7 +327,7 @@ image::data:catalogue-diameter.png[]
 [.collapseBox]
 .Creating an own value mapping
 --
-include::maerkte:partial$catalogue-mapping.adoc[tag=own-mappings-config]
+include::markets:partial$catalogue-mapping.adoc[tag=own-mappings-config]
 --
 
 [#file-export]
@@ -440,7 +364,7 @@ Exporting catalogue data to a file once:
 You can continue working during the export process. +
 *_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes.
 . Once the export is finished, you will be notified (icon:notifications_none[set=material]) that the export file can be downloaded.
-. In the notification center, click on icon:link[set=material] *Download*. +
+. In the notification centre, click on icon:link[set=material] *Download*. +
 *_Tip:_* The notification is no longer visible? You can access the file at any time using the URL shown in the *Download settings*.
 . Save the file on your computer.
 --
@@ -449,7 +373,7 @@ Regular file export::
 +
 --
 
-* Use these instructions to save the variation data of the catalogue regularly to a specified storage location. It is also up to you to decide what “regularly” means. The catalogue data is *_not_* exported to the market.
+Use these instructions to save the variation data of the catalogue regularly to a specified storage location. It is also up to you to decide what “regularly” means. The catalogue data is *_not_* exported to the market.
 
 [.instruction]
 Setting up regular file exports:
@@ -475,11 +399,11 @@ Setting up regular file exports:
 
 2+^| Format settings
 
-include::page$export-standard-formats.adoc[tag=table-format-settings]
+include::page$exporting-standard-formats.adoc[tag=table-format-settings]
 
 2+^| Export settings
 
-include::page$export-standard-formats.adoc[tag=table-export-settings]
+include::page$exporting-standard-formats.adoc[tag=table-export-settings]
 |====
 
 [#switch-to-catalogues]
@@ -487,7 +411,7 @@ include::page$export-standard-formats.adoc[tag=table-export-settings]
 
 For some markets, you can either use an old export or a catalogue format. Find out how to switch here.
 
-. Analyse which characteristics and free text fields you currently use for the data export to this market. Characteristics and free text fields cannot be used for the catalogue export. So create properties for all data that you still need. +
+. Analyse which characteristics and free text fields you currently use for exporting data to the market. Characteristics and free text fields cannot be used for the catalogue export. So create properties for all data that you still need. +
 *_Important:_* The values of the new properties must be identical to the values of the old characteristics. Otherwise, new items may be created during the export to the market.
 . Create a catalogue. For some markets, you have to install a new plugin first. Check the manual page of the individual markets to find out if this is the case.
 . Open the catalogue and check which data fields can be exported to the market.
