ADD more work to the stock chapter

--- a/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
@@ -1,5 +1,6 @@
 = Wareneingänge verwalten
 :keywords: Ware buchen, Ware freigeben, Bestand buchen, Wareneingang, Wareneingänge, Ware einbuchen, Bestand einbuchen, Ware erfassen, Wareneingang erfassen, Meldebestand, Lagerreichweite, Maximalbestand, Bestandspuffer, MHD, Charge, Lagerortvorschlag, Einkaufspreis, Einkaufspreis ermitteln, EK, Menge, UVP, Preis, Warenbezugskosten, leerer Lagerort, Lagerort leer, Lagerbestandseintrag
+:description: Du hast gerade eben Waren von deinem Lieferanten erhalten. Was nun? Auf dieser Seite lernst du, wie du den Bestand in plentymarkets einbuchen kannst.
 :id: D1FCJJV
 :author: team-stock
 
