--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1367,19 +1367,20 @@ Diese Einstellung gilt, bis neuer Wareneingang für die Variante gebucht wird. D
 [#300]
 === Lieferanten
 
-//geht nicht mit include wegen alte/neue UI, aber die Inhalte stimmen fast 1:1 überein mit den Text auf der alte Verzeichnis-Seite und auch mit dem Text unter warenwirtschaft/wareneingaenge-verwalten#100
+//geht nicht mit include wegen alte/neue UI, aber die Inhalte stimmen fast 1:1 überein mit den Text auf der alte Verzeichnis-Seite und auch mit dem Text unter warenwirtschaft/suppliers
 
-Wer liefert dir diese Variante?
-Ordne deine Varianten einem oder mehreren Lieferanten zu.
-Indem du diese Daten in plentymarkets speicherst, kannst du später eine xref:warenwirtschaft:wareneingaenge-verwalten.adoc#450[Aufzeichnung der Wareneingänge führen].
-Du kannst auch xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#[Artikel bei Lieferanten nachbestellen], wenn dir die Lagerbestände ausgehen.
+Wer liefert dir deine Produkte?
+Hier ordnest du jedes deiner Produkte einem oder mehreren Lieferanten zu.
+Dies ist nützlich, damit du später:
+
+* xref:warenwirtschaft:wareneingaenge-verwalten.adoc#[nachverfolgen kannst, wann jeder Lieferant zuletzt Waren an deine Firma geliefert hat].
+* xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#[Waren beim Lieferanten nachbestellen kannst, wenn sie zur Neige gehen].
 
 [TIP]
-.Hast du bereits die Kontaktdaten gespeichert?
+.Hast du bereits Kontaktdaten für deine Lieferanten gespeichert?
 ====
-In plentymarkets sind Lieferanten nichts anderes als Kontaktdaten.
-Bevor du also Lieferanten mit Varianten verknüpfen kannst, musst du in plentymarkets einen xref:crm:kontakte-verwalten.adoc#[Kontaktdatensatz erstellen].
-Als Typ muss "Lieferant" gewählt werden.
+Bevor du angeben kannst, wer welches Produkt liefert, musst du zuerst die nötigen Kontakt-Datensätze für deine Lieferanten angelegt haben.
+xref:warenwirtschaft:suppliers.adoc#[Wie das geht, wird hier erklärt].
 ====
 
 [.instruction]
@@ -1402,7 +1403,7 @@ Lieferant hinzufügen:
 Diese ID wird automatisch von plentymarkets erzeugt.
 
 | *Lieferantenname*
-|Der Vor- und Nachname des Lieferanten, wie sie im xref:crm:kontakte-verwalten.adoc#100[Kontaktdatensatz] gespeichert wurden.
+|Der Vor- und Nachname des Lieferanten, wie er im xref:crm:kontakte-verwalten.adoc#100[Kontaktdatensatz] gespeichert wurden.
 
 | *EK in Bestellwährung*
 |Ist dein Lieferant aus einem anderen Land tätig und verwendet eine andere Währung?
@@ -1448,14 +1449,14 @@ Wenn die Rabattfähikgeit nicht gesetzt ist, wird der eingetragene Rabatt für N
 
 | *Verpackungseinheit*
 |Nutzen du und dein Lieferant unterschiedliche Verpackungseinheiten?
-Gib die Verpackungseinheit (VPE) des Lieferanten ein, wenn sie von dem abweicht, was du xref:artikel:verzeichnis.adoc#180[im Varianten-Datensatz gespeichert] hast.
+Gib die Verpackungseinheit (VPE) des Lieferanten ein, wenn sie von dem abweicht, was du xref:artikel:verzeichnis.adoc#270[im Varianten-Datensatz gespeichert] hast.
 |====
 
 
 [#310]
 === Lager
 
-Wo wird diese Variante gelagert?
+Wo wird die Variante gelagert?
 Ordne deine Varianten dem passenden Lagerort zu.
 Indem du diese Daten in plentymarkets speicherst, kannst du später xref:warenwirtschaft:wareneingaenge-verwalten.adoc#450[den Wareneingang buchen].
 
@@ -1545,7 +1546,7 @@ Ist der Lagerbestand auf dem Lager gleich 0, ist das Aktivieren und Deaktivieren
 | *Lagerortvorschlag*
 |Wähle einen Lagerort, der bei Nachbestellungen automatisch vorgeschlagen werden soll.
 
-*_Hinweis_*: Der Standard-Lagerort bedeutet, dass kein Lagerort zugewiesen wurde.
+*_Hinweis_*: Der Standard-Lagerort dient als Platzhalter und bedeutet, dass noch kein Lagerort zugewiesen wurde.
 
 |====
 
