ADD procedures warranty and cancel open quantities

--- a/docs/en-gb/modules/automation/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/event-procedures.adoc
@@ -554,6 +554,9 @@ Select one of the following settings for the *Date* option: +
 *Return date* = The credit note order is created with the date of the return. +
 *Order date* = The credit note order is created with the date of the creation of the order.
 
+| *Create warranty*
+|The procedure automatically creates a warranty for an order.
+
 | [#intable-order-template]*Use order template*
 |The procedure automatically applies a previously set up order template to an order. Select a template from the drop-down list. +
 Order templates are created in the *Setup » Orders » Order template* menu.
@@ -960,6 +963,8 @@ Select the *Board* and the *Column(s)* from and to which the cards should be mov
 | *Generate PO delivery note*
 |The procedure generates a xref:stock-management:working-with-redistributions.adoc#500[PO delivery note] for redistributions.
 
+| *Cancel open quantities in reorder*
+|The procedure cancels all open quantities in a xref:stock-management:working-with-reorders.adoc#[reorder].
 |====
 
 [#events-procedures-plugins]
