--- a/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
+++ b/docs/de-de/modules/daten/pages/aenderungshistorie.adoc
@@ -475,17 +475,18 @@ Hast du ein Menü unter *Menü-Sichtbarkeiten* ausgewählt, werden automatisch a
 
 //tag::crm[]
 
-Mit Hilfe der Änderungshistorie im Menü *Daten » CRM-Historie* kannst du Änderungen an xref:crm:kontakte.adoc#[Kontaktdaten], ShopBooster-Daten oder die Einstellungen zur xref:daten:datenbereinigung.adoc#[Datenbereinigung] nachvollziehen.
+Mit Hilfe der Änderungshistorie im Menü *Daten » CRM-Historie* kannst du Änderungen an xref:crm:kontakte.adoc#[Kontaktdaten], ShopBooster-Daten oder an den Einstellungen zur xref:daten:datenbereinigung.adoc#[Datenbereinigung] nachvollziehen.
 Die Daten in diesem Menü werden 1 Jahr gespeichert.
 
 [.instruction]
 Änderungen anzeigen:
 
 . Öffne das Menü *Daten » CRM-Historie*.
-. Wähle einen Referenztyp, z.B. die Adresse.
+. Klicke auf icon:filter_alt[set=material].
+. Wähle einen Referenztyp aus der Dropdown-Liste, z.B. die Adresse.
 . Gib die eindeutige Referenz-ID ein, z.B. die ID der Adresse. +
 *_Tipp_*: Du musst die ID kennen, um eine Anpassung an dem Datensatz nachverfolgen zu können.
-. Klicke auf *Suchen* (icon:search[role="blue"]). +
+. Klicke auf *SUCHEN*. +
 → Eine Liste der Änderungen mit alten und neuen Werten, dem Änderungsdatum sowie der Name und die Benutzer-ID der Person, die die Änderung vorgenommen hat, wird angezeigt.
 . Klicke auf die Zeile, um weitere Informationen zu sehen.
 
