FIX a few small issues noticed after golive

--- a/docs/de-de/modules/warenwirtschaft/pages/waren-ausbuchen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/waren-ausbuchen.adoc
@@ -1,4 +1,4 @@
-= Waren ausbuchen
+= Ware ausbuchen
 :keywords: Warenausgang, Ware ausbuchen, Aufträge ausliefern, Lagerentnahme, Stornierung, Retoure, Gewährleistung, Warenausgang buchen, Warenausgang gebucht, Statusänderung, Status 7, Warenausgang zurücksetzen, Paketnummer, Retourengrund, Retouregrund, Gutschrift, Warenausgang manuell buchen
 :id: JTRIWSB
 :author: team-stock
