--- a/docs/de-de/modules/warenwirtschaft/pages/mhd-charge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mhd-charge-verwalten.adoc
@@ -1,4 +1,4 @@
-= MHD/Charge verwalten
+= Artikel mit MHD/Charge
 :keywords: MHD, Charge, Mindesthaltbarkeitsdatum, Mindersthaltbarkeit, Chargen, Haltbarkeit, haltbar, Status Mindesthaltbarkeit, Ware abgelaufen, Ware läuft ab, Ware ok
 :id: AHPX91D
 :author: team-stock
