--- a/docs/de-de/modules/warenwirtschaft/pages/umbuchungen-vornehmen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/umbuchungen-vornehmen.adoc
@@ -1,4 +1,4 @@
-= Umbuchungen vornehmen
+= Ware umbuchen
 :description: Erfahre, wie du mit Lagerumbuchungen in deinem plentymarkets System arbeitest.
 :keywords: Umbuchung, Lagerumbuchung, PO Lieferschein, PO-Lieferschein, Umbuchungs-ID, Umbuchungs ID, purchase order, redistribution
 :id: A5QIHYW
