--- a/docs/de-de/modules/warenwirtschaft/pages/warenbestaende-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/warenbestaende-verwalten.adoc
@@ -1,4 +1,4 @@
-= Warenbestände verwalten
+= Bestand überwachen
 :keywords: Bestand, Warenbestand, Warenbestände, Warenbestand verwalten, Warenbestände verwalten, Bestandsdaten, Nachbestellung, Wareneingang, Warenausgang, Bestandsbegriffe, physischer Warenbestand, reservierter Warenbestand, Netto-Warenbestand, Netto Warenbestand, Warenbestand netto, Bestand reservieren, Bestandsliste, EK, Warenbestand umbuchen, Warenbestandsautomatik, Auftragsstatus ändern, Warenbestandsdaten, Warenbewegung
 :id: LD1RKJI
 :author: team-stock
