--- a/docs/de-de/modules/daten/pages/daten-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/daten-exportieren.adoc
@@ -5,13 +5,13 @@
 :author: team-plenty-channel
 
 Es gibt viele Gründe, Daten aus deinem plentymarkets System zu exportieren.
-Vielleicht willst du z.B.:
+Vielleicht willst du zum Beispiel:
 
 * deine Artikel- und Variantendaten an Marktplätze übertragen.
 * eine CSV-Datei exportieren, die mit Produktdaten, Lagerdaten, Auftragsdaten usw. gefüllt ist.
 Die Datei kannst du anschließend überarbeiten und wieder importieren.
 
-Diese Seite stellt die unterschiedliche Tools dafür kurz vor. Klicke auf die Links, um ausführlichere Informationen über die Tools zu lesen.
+Diese Seite stellt die unterschiedlichen Tools dafür kurz vor. Klicke auf die Links, um ausführlichere Informationen über die Tools zu lesen.
 
 == Elastischer Export
 
