--- a/docs/de-de/modules/daten/pages/elastic.adoc
+++ b/docs/de-de/modules/daten/pages/elastic.adoc
@@ -4,7 +4,7 @@
 :author: team-plenty-channel
 
 Es gibt viele Gründe, Daten aus deinem plentymarkets System zu exportieren.
-Vielleicht willst du z.B.:
+Vielleicht willst du zum Beispiel:
 
 * deine Artikel- und Variantendaten an Marktplätze übertragen.
 * eine CSV-Datei exportieren, die mit Produktdaten, Lagerdaten, Auftragsdaten usw. gefüllt ist.
