--- a/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
@@ -411,7 +411,7 @@ include::page$standardformate-exportieren.adoc[tag=table-export-settings]
 
 Für manche Marktplätze gibt es einen alten Export und einen Katalogexport. Hier erfährst du, wie du wechselst.
 
-. Analysiere, welche Merkmale und Freitextfelder du für den Datenexport zu dem Marktplatz nutzt. Merkmale und Freitextfelder können für den Katalogexport nicht mehr verwendet werden. Erstelle deshalb Eigenschaften für alle Daten, die du weiter benötigst. +
+. Analysiere, welche Merkmale und Freitextfelder du für den Datenexport zu dem Marktplatz nutzt. Merkmale und Freitextfelder können für den Katalogexport nicht mehr verwendet werden. Erstelle deshalb Eigenschaften für alle Daten, die du weiterhin benötigst. +
 *_Wichtig:_* Die Werte der neuen Eigenschaften müssen mit den Werten der alten Merkmale identisch sein. Sonst kann es passieren, dass beim Export zum Marktplatz neue Artikel erstellt werden.
 . Erstelle einen Katalog. Je nach Marktplatz musst du unter Umständen vorher ein neues Plugin installieren. Ob das der Fall ist, erfährst du auf der Handbuchseite des Marktplatzes.
 . Öffne den Katalog und prüfe, welche Datenfelder an den Marktplatz exportiert werden können.
