--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -127,7 +127,7 @@ Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Di
 |====
 |Bedienelement |Symbol |Erläuterung
 
-|[intable-enter-quantity]*Menge eingeben*
+|[#intable-enter-quantity]*Menge eingeben*
 |icon:iso[set=material]
 | Öffnet die Ansicht zur Eingabe der Artikelmenge.
 
