--- a/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-mapping.adoc
@@ -3,7 +3,7 @@
 --
 image::maerkte:catalogue-menu-colours.png[]
 
-* *Navigation* Standardmäßig wird die Ansicht *Zuordnung* angezeigt, wenn du einen Katalog öffnest. Über die Navigation wechselst du zu anderen Ansichten des Katalogs. Rufe die Katalogeinstellungen auf oder setze Filter, um nur bestimmte Daten zu exportieren. Außerdem kannst du zurück zur Katalogübersicht wechseln oder einen neuen Katalog erstellen.
+* *Navigation* Wenn du einen Katalog öffnest, wird standardmäßig die Ansicht *Zuordnung* angezeigt. Über die Navigation wechselst du zu anderen Ansichten des Katalogs. Rufe die Katalogeinstellungen auf oder setze Filter, um nur bestimmte Daten zu exportieren. Außerdem kannst du zurück zur Katalogübersicht wechseln oder einen neuen Katalog erstellen.
 
 * *Toolbar* In der Toolbar kannst du für den Katalog relevante Aktionen durchführen. Speichere zum Beispiel die Zuordnungen der Datenfelder, stelle eine ältere Version des Katalogs wieder her oder blende optionale Marktplatz-Datenfelder ein oder aus.
 
