Update contact links in order area

--- a/docs/de-de/modules/auftraege/pages/buchhaltung.adoc
+++ b/docs/de-de/modules/auftraege/pages/buchhaltung.adoc
@@ -617,7 +617,7 @@ Wähle das Datenformat und erstelle beispielsweise einen Export vom Typ *Finanzb
 
 | *Umsatzsteuer-ID-Prüfung*
 | Der Export im CSV-Format enthält Kund:innen-Daten von geprüften Kund:innen sowie deren Umsatzsteuer-ID. Anhand des Eintrags in der Spalte *valid* der exportierten CSV-Datei ist zu erkennen, ob eine Kund:in über eine gültige USt-IdNr. verfügt oder nicht. *0* steht für ungültig und *1* für gültig. +
-Im Webshop erfolgt die Prüfung der USt-IdNr. automatisch während des Bestellvorgangs. Für Kund:innen, die auf anderen Marktplätzen von dir gekauft haben, kannst du die Prüfung manuell ausführen. Details zur Prüfung der USt-IdNr. findest du im Kapitel xref:main@manual:crm:kontakte-verwalten.adoc#5500[USt-IdNr. prüfen]. +
+Im Webshop erfolgt die Prüfung der USt-IdNr. automatisch während des Bestellvorgangs. Für Kund:innen, die auf anderen Marktplätzen von dir gekauft haben, kannst du die Prüfung manuell ausführen. Details zur Prüfung der USt-IdNr. findest du im Kapitel xref:crm:kontakt-bearbeiten.adoc#ustid-nummer-pruefen[USt-IdNr. prüfen]. +
 *_Wichtig:_* Setze ein Häkchen bei *Aktiv*. Wenn du das Häkchen nicht setzt, werden unabhängig vom gewählten Zeitraum alle Prüfungsdaten exportiert.
 
 | *Verkaufte Warenmengen*
