--- a/docs/de-de/modules/auftraege/pages/gutscheine.adoc
+++ b/docs/de-de/modules/auftraege/pages/gutscheine.adoc
@@ -191,10 +191,10 @@ Mit einem Klick auf die Artikel-ID wird der Artikel im Menü *Artikel » Artikel
 |xref:webshop:mandanten-verwalten.adoc#[Mandanten (Shops)] wählen, für die der Gutschein einlösbar sein soll. Mindestens ein Mandant muss gewählt werden.
 
 | *Kundenklassen*
-|xref:crm:kontakte-verwalten.adoc#15[Kundenklassen] wählen, für die der Gutschein einlösbar sein soll. Mindestens eine Kundenklasse muss gewählt werden.
+|xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] wählen, für die der Gutschein einlösbar sein soll. Mindestens eine Kundenklasse muss gewählt werden.
 
 | *Kundentypen*
-|xref:crm:kontakte-verwalten.adoc#20[Kundentypen] wählen, für die der Gutschein einlösbar sein soll. Mindestens ein Kundentyp muss gewählt werden.
+|xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Kundentypen] wählen, für die der Gutschein einlösbar sein soll. Mindestens ein Kundentyp muss gewählt werden.
 
 2+^| *E-Mail-Vorlage*
 
