--- a/docs/en-gb/modules/orders/pages/document-archive.adoc
+++ b/docs/en-gb/modules/orders/pages/document-archive.adoc
@@ -13,7 +13,7 @@ The following document types are available in the document archive:
 .Order documents generated in plentymarkets
 =====
 * xref:orders:generating-adjustment-forms.adoc[Adjustment forms]
-* <</orders/order-documents/generating-credit-notes#, Credit notes>>
+* xref:orders:generating-credit-notes.adoc#[Credit notes]
 * xref:orders:coupons.adoc#[Coupons]
 * xref:orders:generating-delivery-notes.adoc#[Delivery notes]
 * xref:orders:generating-dunning-letters.adoc#[Dunning letters]
