--- a/docs/en-gb/modules/orders/pages/managing-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/managing-orders.adoc
@@ -40,12 +40,11 @@ Follow the instruction below to create an order via the *CRM » Contacts* menu.
 Creating an order via contacts:
 
 . Go to *CRM » Contacts*.
-. Search the contact by means of the filter settings as described in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search for the contact by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that match the search criteria are displayed.
-. Click in the line of the contact. +
-→ The detail view of the contact opens.
-. Click on *New order* in the context menu. +
-→ The *New order* tab opens.
+. Click in the line of the contact on the left side on icon:more_vert[set=material]. +
+. Click on icon:shopping_cart[set=material] *Orders* > *New order*. +
+→ The *New order* tab in the *Orders » Edit orders* menu opens.
 . Click on *Search* to display a list of variations or use the search fields to search (icon:search[role="blue"]) for the *Item ID* or other *Item data*.
 . Select the items and the quantities that you want to add to the order.
 . *Save* (icon:save[role="green"]) the settings. +
@@ -180,11 +179,11 @@ The order or the offer is created individually for a customer from the *CRM » C
 Creating order or offer via contact:
 
 . Go to *CRM » Contacts*.
-. Search the contact by means of the filter settings as described in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search for the contact by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact page]. +
 → The contacts that match the search criteria are displayed.
-. Click on *Actions* (icon:bars[]) in the row of the contact. +
+. Click on icon:more_vert[set=material] in the line of the contact. +
 → The available options open.
-. Select *New order [Beta]* or *New offer [Beta]*. +
+. Select icon:shopping_cart[set=material] *Orders* > *New order [Beta]* or *New offer [Beta]*. +
 → You are redirected to the order details of the new order or offer. +
 
 Use the drop-down list above the order details to choose between order and offer, even later. Moreover, you can optionally select an xref:orders:managing-orders.adoc#295[order template] which is then applied to this order. As a default, no order template is selected.
@@ -214,12 +213,12 @@ The dropdown-list also offers the possibility to create a new delivery address w
 Clicking on the the preview (icon:visibility[set=material]) redirects you to the contact data. The already carried out settings in the order details will remain.
 
 |*Payment method*
-|If a payment method is defined for the contact, for example in a xref:crm:managing-contacts.adoc#15[customer class], this is preselected. Otherwise you can enter a payment method and select it. Available are all payment methods integrated in your plentymarkets system. +
+|If a payment method is defined for the contact, for example in a xref:crm:preparatory-settings.adoc#create-customer-class[customer class], this is preselected. Otherwise you can enter a payment method and select it. Available are all payment methods integrated in your plentymarkets system. +
 If you use an xref:orders:managing-orders.adoc#295[order template], the payment method selected in the template is taken over as soon as you select the template for an order. After applying the template, the payment method can be changed manually if required.
 
 |*Discount in %*
 |You can manually enter a percentaged discount which is then applied to all order items of the order. The value entered has to be between 0 and 100, negative values are not allowed. +
-A discount is already filled in if the contact is assigned to a customer class in which a value has been entered for the option *Default discount for manual order*. You can find this option in the xref:crm:managing-contacts.adoc#intable-customer-class-discount-type[Discount type] area in the *Setup » CRM » Classes* menu. The prefilled value in the order details is editable.
+A discount is already filled in if the contact is assigned to a customer class in which a value has been entered for the option *Default discount for manual order*. You can find this option in the xref:crm:preparatory-settings.adoc#intable-customer-class-discount-type[Discount type] area in the *Setup » CRM » Classes* menu. The prefilled value in the order details is editable.
 
 |*Currency*
 |The xref:payment:currencies.adoc#30[system currency] is preselected. You can change the currency for the order in the drop-down list.
@@ -1549,7 +1548,7 @@ Furthermore, go to xref:orders:basic-settings.adoc#[Setup » Orders » Settings]
 
 Example: A company may not want to receive an invoice every time one of their employees make a purchase in your online shop. Rather, the company prefers one monthly invoice for all of its employees’ purchases. Set up a customer class for this situation. The invoice recipient is specified by saving a customer ID in the customer class. The multi-invoice is generated directly within the corresponding multi-order and sent to this invoice recipient. +
 
-Go to *Orders »Multi-orders* to create a multi-order for a specific customer class and a fixed time period. This way, all unpaid orders belonging to the customer class are combined in one multi-order. Use the option *Customer ID* in the customer class settings to determine a customer who is listed as the owner as well as as the recipient of the multi-invoice for a customer class. According to your workflow, we recommend creating specific xref:crm:managing-contacts.adoc#15[customer classes] for multi-orders.
+Go to *Orders »Multi-orders* to create a multi-order for a specific customer class and a fixed time period. This way, all unpaid orders belonging to the customer class are combined in one multi-order. Use the option *Customer ID* in the customer class settings to determine a customer who is listed as the owner as well as as the recipient of the multi-invoice for a customer class. According to your workflow, we recommend creating specific xref:crm:preparatory-settings.adoc#create-customer-class[customer classes] for multi-orders.
 
 [.instruction]
 Creating a multi-order for a customer class:
@@ -1651,7 +1650,7 @@ include::_includes:page$EA.adoc[]
 === Generating a multi credit note
 
 Multi credit note are generated in the menu *Orders » Multi-orders*. +
-All credit notes for a customer class are combined in one multi credit note. Depending on your workflow, we recommend creating specific xref:crm:managing-contacts.adoc#15[customer classes] for multi credit notes.
+All credit notes for a customer class are combined in one multi credit note. Depending on your workflow, we recommend creating specific xref:crm:preparatory-settings.adoc#create-customer-class[customer classes] for multi credit notes.
 
 [.instruction]
 Generating a multi credit note for a customer class:
@@ -2409,7 +2408,7 @@ Click on *Book outgoing items* (icon:order_sent[set=plenty]) to manually book th
 
 | [#intable-payment-terms-order]*Terms of payment*
 |Enter values for *Payment due (days)*, *Value date (days)*, *Early payment discount (days)* and *Early payment discount (%)* to create your terms of payment. *_Important_*: If you want to use value date and early payment discount, you must enter a payment due. If there is nothing or the value 0 entered for payment due, the payment terms will not be transferred to documents. +
-If the values were already saved in the xref:crm:managing-contacts.adoc#300[customer data], they will be taken from there and automatically be displayed here. The customer data have priority. If nothing is saved in the customer data, the customer classes are checked. If values are defined in a xref:crm:managing-contacts.adoc#15[customer class], these are then transferred to the payment terms of the order. If no values are defined in either the customer data or the customer class, the payment terms fields of the order are left empty. +
+If the values were already saved in the xref:crm:edit-contact.adoc#details-individual-areas[customer data], they will be taken from there and automatically be displayed here. The customer data have priority. If nothing is saved in the customer data, the customer classes are checked. If values are defined in a xref:crm:preparatory-settings.adoc#create-customer-class[customer class], these are then transferred to the payment terms of the order. If no values are defined in either the customer data or the customer class, the payment terms fields of the order are left empty. +
 On the order, the payment terms can manually be entered or updated. This can be done regardless of where they are taken from or of whether there are values preselected at all. +
 The values entered on the corresponding order are transferred to the order documents. Note also the xref:orders:order-documents.adoc#intable-display-payment-terms[document settings] for this. The payment terms can be displayed on the order documents xref:orders:generating-invoices.adoc#[invoice], <<orders/order-documents/generating-pro-forma-invoice#, pro forma invoice><, xref:orders:generating-order-confirmations.adoc#[order confirmations] as well as xref:orders:generate-offer.adoc#[offer]. +
 *_Important_*: The payment terms will only be displayed on these documents if the corresponding order was paid with the payment method xref:payment:invoice.adoc#[Invoice] or the payment method xref:payment:cash-in-advance.adoc#[Cash in advance].
@@ -2503,7 +2502,7 @@ Note that there is an obligation to keep records. Therefore, make sure that all 
 [#1580]
 === Tab: Customer
 
-By clicking on the *Customer* tab, the xref:crm:managing-contacts.adoc#[contact data record] opens. These information are editable.
+By clicking on the *Customer* tab, the xref:crm:edit-contact.adoc#details-individual-areas[contact data record] opens. These information are editable.
 
 [#1590]
 === Tab: Tickets
