--- a/docs/en-gb/modules/orders/pages/order-documents.adoc
+++ b/docs/en-gb/modules/orders/pages/order-documents.adoc
@@ -108,7 +108,7 @@ Within the font group *Extended alphabets*, you can choose between the options *
 
 | *Structure of the invoice/delivery address*
 |Select the elements that should be included in the invoice and delivery address and in which order these elements should be positioned. +
-Activate the option *Contact person* if the information on the contact person saved in the xref:crm:managing-contacts.adoc#100[contact data] should be included in invoice and delivery addresses. +
+Activate the option *Contact person* if the information on the contact person saved in the xref:crm:edit-contact.adoc#details-individual-areas[contact data] should be included in invoice and delivery addresses. +
 Activate the option *Title* if the title saved in the menu point *Addresses* in the contact data should be positioned in front of the contact name.
 
 | *Currency of the document*
@@ -224,7 +224,7 @@ The page number is a field that is often positioned on the bottom of the page. I
 [#700]
 === Customer characteristics
 
-This area is only displayed if xref:crm:managing-contacts.adoc#950[properties] have been saved for the language of the document template in your system. You can then name the properties using the text fields and position them in the document with the help of the coordinates.
+This area is only displayed if xref:crm:preparatory-settings.adoc#properties-introduction[properties] have been saved for the language of the document template in your system. You can then name the properties using the text fields and position them in the document with the help of the coordinates.
 
 [#800]
 === Columns stock units
@@ -404,7 +404,7 @@ The margin scheme setting in plentymarkets is an older customized implementation
 This is a note for German authorities notifying them that the export delivery is tax-free. Take into account that for deliveries from the EU to the UK, additional information might be needed on the invoice. For example information about the net value of the delivery or your UK VAT. We recommend that you check with your tax office what is needed for deliveries to the UK.
 
 | *Payment instruction of the customer class*
-|Select whether the payment instruction of the customer class is displayed on the document. For further information on the payment instruction of the customer class, refer to the xref:crm:managing-contacts.adoc#15[Managing contacts] page of the manual.
+|Select whether the payment instruction of the customer class is displayed on the document. For further information on the payment instruction of the customer class, refer to the xref:crm:preparatory-settings.adoc#create-customer-class[Creating a customer class] chapter.
 
 | *Standard payment note (debit)*
 |For orders with the payment method direct debit, the note *The invoice amount will be gratefully debited from your account* is displayed on the invoice and delivery note. Activate the option *Hide note* if the note should not be displayed on the documents.
