--- a/docs/de-de/modules/auftraege/pages/abonnement.adoc
+++ b/docs/de-de/modules/auftraege/pages/abonnement.adoc
@@ -261,11 +261,11 @@ Für das Anlegen eines neuen Abonnements gehst du über das Menü *CRM » Kontak
 Neues Abonnement über die Kontaktübersicht anlegen:
 
 . Öffne das Menü *CRM » Kontakte*.
-. Suche (icon:search[role="blue"]) den Kontakt anhand der Filtereinstellungen wie im Kapitel xref:crm:kontakte-verwalten.adoc#200[Kontakt suchen] beschrieben. +
+. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
-. Klicke in die Zeile des Kontakts auf *Aktionen*. +
+. Klicke in der Zeile des Kontakts ganz links auf icon:more_vert[set=material]. +
 → Eine Auswahl der verfügbaren Optionen wird geöffnet.
-. Klicke in der Auswahl auf *Neues Abonnement*. +
+. Navigiere zu icon:shopping_cart[set=material] *Aufträge* > *Neues Abonnement [Beta]*. +
 → Du wirst automatisch zu den Einstellungen für das neue Abonnement weitergeleitet.
 
 [#300]
