--- a/docs/de-de/modules/auftraege/pages/auftraege.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege.adoc
@@ -19,7 +19,7 @@ Folgende Auftragstypen gibt es in plentymarkets:
  * xref:auftraege:auftraege-verwalten.adoc#1100[Vorbestellung]
  * xref:auftraege:auftraege-verwalten.adoc#600[Gewährleistung]
  * xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift]
- * <</auftraege/auftraege-verwalten#300, Lieferauftrag>>
+ * xref:auftraege:auftraege-verwalten.adoc#300[Lieferauftrag]
  * xref:auftraege:auftraege-verwalten.adoc#700[Reparatur]
  * xref:auftraege:auftraege-verwalten.adoc#400[Retoure]
  * xref:auftraege:auftraege-verwalten.adoc#800[Sammelauftrag]
