--- a/docs/de-de/modules/fulfillment/pages/versand-center-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/versand-center-2-0.adoc
@@ -983,7 +983,7 @@ Lege fest, nach welchen Kriterien Aufträge in Lieferaufträge gesplittet werden
 * Lager und Versandprofil
 * Lager- und Nettowarenbestand
 
-Weitere Informationen findest du im Bereich <<#auftraege, Aufträge>> im Kapitel xref:auftraege:auftraege-verwalten.adoc#300[Auftragstyp Lieferauftrag nutzen].
+Weitere Informationen findest du im Bereich xref:auftraege:auftraege.adoc#[Aufträge] im Kapitel xref:auftraege:auftraege-verwalten.adoc#300[Auftragstyp Lieferauftrag nutzen].
 
 [#faq]
 == FAQ
