fix table formatting

--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -33,7 +33,7 @@ Einstellungen für Picklisten vornehmen:
 |====
 |Einstellung |Erläuterung
 
-2+| Bereich *Allgemeine Einstellungen*
+2+^| Bereich *Allgemeine Einstellungen*
 
 | *Picklistensortierung*
 |In welcher Reihenfolge sollen Picklisten angezeigt werden, wenn du die Funktion in plentyWarehouse öffnest? Wähle eine der beiden folgenden Optionen. +
@@ -43,9 +43,9 @@ Einstellungen für Picklisten vornehmen:
 | [#intable-trolleytag]*Eingabe einer Wagenkennung ermöglichen*
 |Aktiviere diese Option, um beim Öffnen einer Pickliste die Option zur Eingabe einer Wagenkennung anzubieten. Diese Zuordnung macht Sinn, wenn du einen bestimmten Kommissionierwagen als Behälter für die Artikel der Pickliste verwenden möchtest. Stelle sicher, dass du die gleiche Kennung auch am Kommissionierwagen angebracht hast, sodass der Wagen und die Pickliste korrekt zugeordnet werden. Weitere Informationen findest du im Kapitel <<#330, Wagenkennung verwenden>>.
 
-2+| Bereich *Artikelerfassung*
+2+^| Bereich *Artikelerfassung*
 
-| [#intable-itemscan]*Verpflichtender Artikel-Scan*
+|[#intable-itemscan]*Verpflichtender Artikel-Scan*
 |Verwende diese Option, um festzulegen, welche Regeln für das Erfassen von Artikeln der Pickliste gelten sollen. +
 *Keine Einschränkungen* = Artikel können entweder durch Scannen des Barcodes oder per manueller Auswahl erfasst werden. +
 *Artikelsuche einschränken* = Artikel ohne Barcode können über die Artikelsuche erfasst werden. Artikel mit Barcode _müssen_ durch Scannen des Barcodes auf dem Artikeletikett erfasst werden. +
