--- a/docs/en-gb/modules/stock-management/pages/mobile-pick-lists.adoc
+++ b/docs/en-gb/modules/stock-management/pages/mobile-pick-lists.adoc
@@ -33,7 +33,7 @@ Carrying out settings for pick lists:
 |====
 |Setting |Explanation
 
-2+| *General settings* area
+2+^| *General settings* area
 
 | *Pick list sorting*
 |In which order should pick lists be displayed when you open the function in plentyWarehouse? Select one of the following two options. +
@@ -43,7 +43,7 @@ Carrying out settings for pick lists:
 | [#intable-trolleytag]*Enable entering a trolley tag*
 |Activate this option to display a field for entering a trolley tag when opening a pick list. This makes sense if you want to determine a specific trolley as a container for the items included in the pick list. Make sure to put an identical tag on the trolley so that the trolley can be correctly assigned to the pick list. For more information, refer to the chapter <<#330, Using trolley tags>>.
 
-2+| *Item registration* area
+2+^| *Item registration* area
 
 | [#intable-itemscan]*Mandatory item scan*
 |Use this option to determine which rules should apply when registering items included in the pick list. +
