update search includes

--- a/docs/de-de/modules/_includes/pages/search-apply-filter.adoc
+++ b/docs/de-de/modules/_includes/pages/search-apply-filter.adoc
@@ -3,8 +3,10 @@ Infos zur Datei:
 Titel: Gespeicherte Filter anwenden (je nach Ebene der Überschrift selbst einfügen)
 ////
 
+Gehe wie im Folgenden vor, um einen gespeicherten Filter in der Suche anzuwenden.
+
 [.instruction]
-Gespeicherte Filter anwenden:
+Gespeicherten Filter anwenden:
 
 . Öffne das Menü *{menu-path}*.
 . Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material]).
