--- a/docs/de-de/modules/_includes/pages/search-save-current-filter.adoc
+++ b/docs/de-de/modules/_includes/pages/search-save-current-filter.adoc
@@ -1,7 +1,9 @@
 ////
 Infos zur Datei:
-Titel: Aktuellen Filter speichern (je nach Ebene der Überschrift selbst einfügen)
- <<#filter-als-standard, Filter als Standard>> als Anker verwenden, um korrekt auf include-Datei search-set-default-filter.adoc zu verlinken.
+
+Bitte folgende Überschrift – je nach Ebene der Überschrift – verwenden: "Aktuellen Filter speichern" 
+
+ <<#filter-als-standard, Filter als Standard>> als Anker verwenden, um korrekt auf die include-Datei "search-set-default-filter.adoc" zu verlinken.
 ////
 
 :menu-path:
