--- a/docs/en-gb/modules/_includes/pages/search-set-default-filter.adoc
+++ b/docs/en-gb/modules/_includes/pages/search-set-default-filter.adoc
@@ -14,7 +14,7 @@ You can set the filter as default filter directly when creating it as described 
 Setting a default filter:
 
 . Go to *{menu-path}*.
-. Click in the line of the saved filter on icon:star_border[set=material] *Set as default*.
+. In the line of the saved filter, click on icon:star_border[set=material] *Set as default*.
 . If you want to set another filter as default filter, deactivate the currently selected default filter by clicking on icon:star[set=material] *Do not use as default*. +
 → The next time you open the menu, the default filter will be applied automatically.
 
