new catalogue pages - DE

--- a/docs/de-de/modules/daten/partials/catalogues-faq.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-faq.adoc
@@ -1,3 +1,16 @@
+//tag::faq-which-format[]
+[.collapseBox]
+.Wofür brauche ich noch mal welches Katalogformat?
+--
+
+//tag::first-page[]
+* *_Du möchtest Daten aus plentymarkets in eine CSV-, JSON-, TXT- oder XML-Datei exportieren?_*
+  ** Dazu benötigst du einen xref:daten:dateiexport.adoc#[Katalog mit Standardformat].
+* *_Du möchtest Artikeldaten zu Marktplätzen exportieren?_*
+  ** Dazu benötigst du einen xref:daten:marktplatzexport.adoc#[Katalog mit Marktplatzformat].
+//end::first-page[]
+--
+//end::faq-which-format[]
 
 include::page$artikel.adoc[tag=faq-export-key]
 
@@ -7,7 +20,7 @@ include::page$artikel.adoc[tag=faq-array]
 
 include::page$artikel.adoc[tag=faq-import]
 
-[.collapseBox]
+
 .*Unter der Download-URL des Katalogs gibt es keine Datei. Warum?*
 --
 
@@ -41,3 +54,20 @@ Personen mit xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#10[Backen
 . Wenn das Problem weiterhin besteht, wende dich an unser link:https://forum.plentymarkets.com/c/importexport/multichannel/445[Support-Team im Forum^].
 --
 //end::rights[]
+
+//tag::faq-manage[]
+[.collapseBox]
+.*Ich will Kataloge importieren, exportieren, löschen, kopieren, Versionen wiederherstellen usw. Wie geht das?*
+--
+
+Gar kein Problem:
+
+* xref:daten:catalogue-manage.adoc#190[Kataloge kopieren]
+* xref:daten:catalogue-manage.adoc#210[Kataloge löschen]
+* xref:daten:catalogue-manage.adoc#250[Andere Katalog-Version wiederherstellen]
+* xref:daten:catalogue-manage.adoc#240[Gelöschten Katalog wiederherstellen]
+* xref:daten:catalogue-manage.adoc#270[Kataloge exportieren]
+* xref:daten:catalogue-manage.adoc#280[Kataloge importieren]
+* xref:daten:catalogue-manage.adoc#catalogue-rights[Rechte für Backend-Benutzer:innen vergeben]
+--
+//end::faq-manage[]
