--- a/docs/de-de/modules/daten/pages/kataloge.adoc
+++ b/docs/de-de/modules/daten/pages/kataloge.adoc
@@ -2,33 +2,9 @@
 :keywords:
 :description: Im Menü *Daten » Kataloge* erstellst du Kataloge für den Export von Daten.
 :id: VP4I6LM
+:page-aliases: kataloge-verwalten.adoc
 :author: team-plenty-channel
 
-//tag::catalogue-formats[]
-Kataloge dienen dazu, Daten aus deinem plentymarkets System zu exportieren. Es wird dabei zwischen Katalogen mit Marktplatz-Formaten und Katalogen mit Standardformaten unterschieden:
+Kataloge dienen dazu, Daten aus deinem plentymarkets System zu exportieren. Es gibt Kataloge mit Marktplatz-Formaten und Kataloge mit Standardformaten.
 
-[cols="1,3a"]
-|====
-| Katalogformat | Erläuterung
-
-| *Standardformate*
-| Mit den Standardformaten *_exportierst du Daten aus deinem plentymarkets System in ein CSV-, JSON-, TXT- oder XML-Datei_*.
-
-Für den Export verschiedener Daten stehen dir verschiedene Standardformate zur Verfügung. Um zum Beispiel deine Warenbestände zu exportieren, nutzt du das Standardformat xref:daten:katalog-warenbestaende.adoc#[Warenbestände]. Zum Export von Artikeldaten steht das Standardformat xref:daten:katalog-artikel.adoc#[Artikel] zur Verfügung.
-
-Bisher kannst du aber noch nicht alle Arten von Daten über Kataloge exportieren. Bis Standardformate für alle Datenarten verfügbar sind, kannst du weiterhin den xref:daten-exportieren:FormatDesigner.adoc#[Formatdesigner] nutzen.
-
-* Wie du Kataloge mit Standardformaten erstellst, ist auf der Seite xref:daten:dateiexport.adoc#[Standardformate erstellen] beschrieben.
-
-| *Marktplatz-Format*
-| Mit den Marktplatz-Formaten *_exportierst du Variantendaten an Marktplätze und andere Verkaufskanäle._*
-
-Jeder Verkaufskanal benötigt unterschiedliche Produktdaten. Häufig müssen auch für verschiedene Produktkategorien (Tierfutter, Haushalt, Lebensmittel) unterschiedliche Produktdaten an denselben Verkaufskanal exportiert werden.
-
-Ein Marktplatz-Format stellt ein Gerüst der Daten bereit, die der Verkaufskanal entgegennehmen kann. So kannst du die Informationen zu deinem Produktsortiment ganz auf die Anforderungen und die Zielgruppe eines Verkaufskanals zuschneiden. Aktuell kannst du die Kataloge nutzen, um Daten z.B. an die Marktplätze Etsy, Metro, OTTO Market und Amazon zu übertragen.
-
-* Eine Einführung in das Thema Marktplatzformate findest du auf der Seite xref:daten:marktplatzexport.adoc#[Kataloge: Marktplatzexport].
-* Wie du Kataloge mit Marktplatz-Formaten erstellst, ist xref:maerkte:maerkte.adoc#[auf den Seiten der einzelnen Verkaufskanäle beschrieben].
-
-|====
-//end::catalogue-formats[]
+include::partial$catalogues-faq.adoc[tag=first-page]
