--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -4,24 +4,16 @@
 :page-aliases: dateiexport.adoc
 :id: Z14A1MY
 :author: team-plenty-channel
-
 :file-export:
 
-Mit den Standardformaten des Katalogs exportierst du Daten aus deinem plentymarkets System. Du kannst Daten als CSV-, JSON, TXT- oder XML-Datei exportieren.
+Mit den Standardformaten des Katalogs exportierst du Daten aus deinem plentymarkets System. Du kannst Daten als CSV-, JSON, TXT- oder XML-Datei exportieren. Für den Export von Daten stehen dir xref:daten:katalog-formate.adoc#[verschiedene Standardformate zur Verfügung]. Bisher kannst du noch nicht alle Arten von Daten über Kataloge exportieren. Bis Standardformate für alle Arten von Daten verfügbar sind, kannst du weiterhin den xref:daten:FormatDesigner.adoc#[Formatdesigner] nutzen.
 
 include::_includes:page$new-page-info-box.adoc[]
 
-Für den Export verschiedener Daten stehen dir verschiedene Standardformate zur Verfügung:
+[#catalogue-menu]
+== Katalogmenü für Standardformate kennenlernen
 
-* Um zum Beispiel deine Warenbestände zu exportieren, nutzt du das Standardformat xref:daten:katalog-warenbestaende.adoc#[Warenbestände].
-* Zum Export von Artikeldaten steht das Standardformat xref:daten:katalog-artikel.adoc#[Artikel] zur Verfügung.
-
-NOTE: Bisher kannst du noch nicht alle Arten von Daten über Kataloge exportieren. Bis Standardformate für alle Datenarten verfügbar sind, kannst du weiterhin den xref:daten:FormatDesigner.adoc#[Formatdesigner] nutzen.
-
-[#first-contact]
-== Erstes Kennenlernen
-
-include::partial$catalogue-first-contact.adoc[]
+include::partial$catalogue-menu.adoc[]
 
 [#create-catalogue]
 == Katalog erstellen
@@ -818,11 +810,6 @@ Manuellen Export in Katalogübersicht starten::
 image::daten:katalog-export.gif[]
 
 [#faq]
-== Fragen und Antworten
+== FAQ: Fragen und Antworten
 
 include::partial$catalogues-faq.adoc[]
-
-[#manage-catalogues]
-== Kataloge verwalten: löschen, kopieren etc.
-
-include::partial$catalogues-manage.adoc[]
