--- a/docs/de-de/modules/daten/partials/catalogue-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-menu.adoc
@@ -1,4 +1,4 @@
-Wenn du das Menü *Daten » Kataloge* öffnest, siehst du als erstes die Katalogübersicht. xref:daten:catalogue-first-contact.adoc#catalogue-overview[Diese Katalogübersicht kannst du hier kennenlernen.]
+Wenn du das Menü *Daten » Kataloge* öffnest, siehst du als erstes die Katalogübersicht. xref:daten:catalogues-first-contact.adoc#catalogue-overview[Diese Katalogübersicht kannst du hier kennenlernen.]
 
 ifdef::file-export[Das Katalogmenü siehst du, wenn du einen Katalog mit Marktplatz-Format öffnest.]
 ifdef::marketplace-export[Das Katalogmenü siehst du, wenn du einen Katalog mit Standardformat öffnest.]
