--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -26,7 +26,7 @@ plentymarkets is working on moving all markets to catalogue formats. At the mome
 [#first-contact]
 == First introduction
 
-include::partial$catalogue-first-contact.adoc[]
+include::partial$catalogues-first-contact.adoc[]
 
 [#market-formats]
 == What is a catalogue with marketplace format?
