--- a/docs/en-gb/modules/data/pages/export-standard-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-standard-formats.adoc
@@ -21,7 +21,7 @@ NOTE: However, not all types of data can currently be exported using catalogues.
 [#first-contact]
 == First introduction
 
-include::partial$catalogue-first-contact.adoc[]
+include::partial$catalogues-first-contact.adoc[]
 
 [#create-catalogue]
 == Creating catalogues
