OTTO alias - DE+EN

--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -3,6 +3,7 @@
 :description: Multi-Channel in plentymarkets: Set up the interface to OTTO Market in your plentymarkets system.
 :id: SMKVRT7
 :author: team-plenty-channel
+:page-aliases: otto.adoc
 :ea-queue:
 
 //tag::otto-market-page[]
