--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -3,6 +3,7 @@
 :description: Multi-Channel in plentymarkets: Richte die Schnittstelle zu OTTO Market in deinem plentymarkets System ein.
 :id: SMKVRT7
 :author: team-plenty-channel
+:page-aliases: otto.adoc
 :ea-queue:
 
 //tag::otto-market-page[]
